fixed need-help button spacing and copy

--- a/templates/less/pages/login.less
+++ b/templates/less/pages/login.less
@@ -17,8 +17,10 @@
 
   .need-help {
     line-height: 50px;
+    float: left;
+
     @media (min-width : 451px) {
-      padding: 10px 80px 0 0;
+      padding: 2px 80px 0 20px;
       display: inline;
     }
   }
